--- a/buszy/art.html
+++ b/buszy/art.html
@@ -423,7 +423,7 @@
             }, 300));
 
             // Refresh data every 5 seconds
-            // setInterval(fetchBusArrivals, 5000);
+            setInterval(fetchBusArrivals, 5000);
 
             // Listen for changes in localStorage to update time format dynamically
             window.addEventListener('storage', (event) => {
