--- a/buszy/art.html
+++ b/buszy/art.html
@@ -20,6 +20,10 @@
     <link rel="stylesheet" href="../css/style-breakpoints.css">
     <link rel="stylesheet" href="../css/dark-mode.css">
 
+
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" crossorigin="" />
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" crossorigin=""></script>
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-WN76281P3Q"></script>
     <script>
@@ -47,6 +51,164 @@
 
     .footer {
         display: none;
+    }
+
+
+    .card-container {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+        gap: 1rem;
+        margin-top: 1.5rem;
+    }
+
+    .card {
+        border: 1px solid #ddd;
+        border-radius: 25px;
+        padding: 1rem;
+        background-color: #fff;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    }
+
+    .card .card-header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        font-weight: bold;
+        font-size: 1.2rem;
+        margin-bottom: 0.5rem;
+    }
+
+    .card .card-content {
+        display: flex;
+        flex-direction: column;
+        gap: 0.5rem;
+    }
+
+    .card .card-content span {
+        display: flex;
+        align-items: center;
+        gap: 0.5rem;
+    }
+
+    .card .operator-logo {
+        width: 50px;
+        height: auto;
+    }
+
+    .card-text {
+        text-align: left !important;
+    }
+
+    .card-bt {
+        margin-top: 2em;
+    }
+
+    .service-no {
+        background-color: #94d40b;
+        border-radius: 5px;
+        color: #000;
+        font-weight: bold;
+        padding: 5px 10px;
+    }
+
+    .bus-time {
+        display: inline-flex;
+        width: 125px;
+        text-align: center;
+        margin-right: 0em;
+        font-size: 20px;
+        font-weight: bold;
+        margin-top: 2px;
+        margin-bottom: 2px;
+    }
+
+    .bus-stop-code {
+        display: inline-flex;
+        align-items: center;
+        background-color: #94d40b;
+        color: #000;
+        font-weight: bold;
+        font-size: 20px;
+        padding: 5px 4px;
+        border-radius: 5px;
+        gap: 10px;
+        cursor: default;
+    }
+
+    body.dark-mode .bus-stop-code {
+        display: inline-flex;
+        align-items: center;
+        background-color: #7db603;
+        color: #000;
+        font-weight: bold;
+        font-size: 20px;
+        padding: 5px 4px;
+        border-radius: 5px;
+        gap: 10px;
+        cursor: default;
+    }
+
+    .bus-stop-code img {
+        width: 35px;
+        height: auto;
+        cursor: default;
+    }
+
+    .bus-location-section {
+        display: none;
+    }
+
+    #bus-map {
+        margin-bottom: 2em;
+        border-radius: 25px;
+    }
+
+    .bus-stop-code-text,
+    body.dark-mode .bus-stop-code-text {
+        font-size: 25px;
+        font-weight: bold;
+        color: #000;
+        background-color: #fff;
+        border-top-right-radius: 5px;
+        border-bottom-right-radius: 5px;
+        padding: 2px 6px;
+        cursor: default;
+    }
+
+    .bus-stop-description,
+    body.dark-mode .bus-stop-description {
+        font-size: 35px;
+        font-weight: bold;
+        margin-left: 12px;
+        cursor: default;
+    }
+
+    .bus-stop-info {
+        display: flex;
+        align-items: center;
+    }
+
+    body.dark-mode .card {
+        background-color: #2e2e2e;
+        border: 1px solid #2b2b2b33;
+        box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
+    }
+
+    body.dark-mode .card .card-header {
+        background-color: #0000002c;
+        border-radius: 15px;
+    }
+
+    body.dark-mode .service-no {
+        background-color: #7db603;
+        color: #000;
+    }
+
+    body.dark-mode .leaflet-touch .leaflet-bar a {
+        width: 30px;
+        height: 30px;
+        line-height: 30px;
+        background-color: #2e2e2e;
     }
 </style>
 
@@ -266,37 +428,39 @@
 
     </section>
 
-    <!-- Section Contents -->
+    <!-- Add a container for the map -->
+    <section class="bus-location-section">
+        <div class="container">
+            <button id="current-location-btn" style="padding: 10px; margin-bottom: 1em;" class="btn btn-busloc btn-sm"
+                title="Go to Current Location">
+                <i class="fa-solid fa-location-crosshairs"></i>
+            </button>
+            <div id="bus-map" style="height: 400px; width: 100%;"></div>
+        </div>
+    </section>
+
+
     <section class="about-me-summ clearfix" style="padding-bottom: 5em;">
         <div class="container">
             <div class="fleet-legend">
                 <span><img src="assets/dd.png" alt="BD Icon" class="fleet-icon"> Double</span>
-                <span><img src="assets/bd.png" alt="SMRT Icon" class="fleet-icon"> Bendy</span>
+                <span style="gap: 2px;"><img src="assets/bd.png" alt="SMRT Icon" class="fleet-icon"> Bendy</span>
                 <span><img src="assets/sd.png" alt="Other Icon" class="fleet-icon"> Single</span>
             </div>
 
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th scope="col" class="svc-spacing">Services</th>
-                        <th scope="col" class="departure-spacing">Arrival Times</th>
-                        <th class="operator-column" scope="col">Operator</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr class="message">
-                        <td colspan="3">
-                            <p
-                                style="text-align:center; display: flex; align-items: center; justify-content: center; gap: 10px;">
-                                <span class="spinner"></span> Loading Data...
-                            </p>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
+            <!-- Responsive Cards -->
+            <div class="row" id="bus-arrivals-container">
+                <div class="col-12 text-center">
+                    <p id="loading-message" style="display: flex; align-items: center; justify-content: center;">
+                        <span class="spinner-border" role="status" style="margin-right: 1em;"></span>Loading Data...
+                    </p>
 
+                </div>
+            </div>
         </div>
     </section>
+
+
 
     <!-- Footer -->
     <footer class="footer">
@@ -347,235 +511,7 @@
 
     <script src="../js/utils.js"></script>
 
-
-    <script>
-        document.addEventListener('DOMContentLoaded', async () => {
-            const searchInput = document.getElementById('bus-stop-search'); // Search input field
-            const filterTitle = document.getElementById('filter-title'); // Title element
-
-            // Get the BusStopCode from the URL
-            const urlParams = new URLSearchParams(window.location.search);
-            const busStopCode = urlParams.get('BusStopCode');
-
-            if (busStopCode) {
-                searchInput.value = busStopCode;
-
-                // Fetch the bus stop name from the /bus-stops endpoint
-                try {
-                    let busStops = JSON.parse(localStorage.getItem('allBusStops')) || [];
-
-                    // If bus stops are not cached, fetch them from the server
-                    if (busStops.length === 0) {
-                        let skip = 0;
-                        let hasMoreData = true;
-
-                        while (hasMoreData) {
-                            const response = await fetch(`https://bat-lta-9eb7bbf231a2.herokuapp.com/bus-stops?$skip=${skip}`);
-                            const data = await response.json();
-
-                            if (data.value.length === 0) {
-                                hasMoreData = false;
-                            } else {
-                                busStops = busStops.concat(data.value);
-                                skip += 500; // Move to the next page
-                            }
-                        }
-
-                        // Save the fetched bus stops to localStorage
-                        localStorage.setItem('allBusStops', JSON.stringify(busStops));
-                    }
-
-                    // Find the bus stop by BusStopCode
-                    const busStop = busStops.find(stop => stop.BusStopCode === busStopCode);
-
-                    if (busStop) {
-                        // Update title with bus stop name and code
-                        filterTitle.textContent = `${busStop.BusStopCode} - ${busStop.Description}`;
-                    } else {
-                        filterTitle.textContent = `Bus Stop Not Found (${busStopCode})`;
-                    }
-                } catch (error) {
-                    console.error('Error fetching bus stop name:', error);
-                    filterTitle.textContent = `Error Loading Bus Stop Name (${busStopCode})`;
-                }
-
-                fetchBusArrivals(); // Fetch bus arrival timings
-            } else {
-                filterTitle.textContent = 'Enter Bus Stop Code';
-            }
-
-            const updateUrl = () => {
-                const url = new URL(window.location.href);
-                const currentValue = searchInput.value.trim();
-
-                if (currentValue) {
-                    url.searchParams.set('BusStopCode', currentValue);
-                } else {
-                    url.searchParams.delete('BusStopCode');
-                }
-
-                window.history.replaceState({}, document.title, url.toString());
-            };
-
-            searchInput.addEventListener('input', debounce(() => {
-                updateUrl();
-                fetchBusArrivals();
-            }, 300));
-
-            // Refresh data every 5 seconds
-            setInterval(fetchBusArrivals, 5000);
-
-            // Listen for changes in localStorage to update time format dynamically
-            window.addEventListener('storage', (event) => {
-                if (event.key === 'timeFormat') {
-                    fetchBusArrivals(); // Re-fetch and update the table with the new format
-                }
-            });
-        });
-
-        function debounce(func, delay) {
-            let timeout;
-            return function (...args) {
-                clearTimeout(timeout);
-                timeout = setTimeout(() => func.apply(this, args), delay);
-            };
-        }
-
-        // Updated fetchBusArrivals function
-        async function fetchBusArrivals() {
-            try {
-                const searchInput = document.getElementById('bus-stop-search').value.trim();
-                const tableBody = document.querySelector('table tbody');
-
-                if (!searchInput) {
-                    tableBody.innerHTML = `
-                <tr class="no-data">
-                    <td colspan="3">
-                        <p>Pick a Bus stop in the Search Page.</p>
-                    </td>
-                </tr>`;
-                    return;
-                }
-
-                const url = new URL('https://bat-lta-9eb7bbf231a2.herokuapp.com/bus-arrivals');
-                url.searchParams.append('BusStopCode', searchInput);
-
-                const response = await fetch(url);
-
-                if (!response.ok) {
-                    throw new Error('Failed to fetch bus arrivals');
-                }
-
-                const data = await response.json();
-                console.log('API Response:', data);
-
-                tableBody.innerHTML = '';
-
-                if (!data.Services || data.Services.length === 0) {
-                    tableBody.innerHTML = `
-                <tr class="no-data">
-                    <td colspan="3">
-                        <p>No Data Available</p>
-                    </td>
-                </tr>`;
-                    return;
-                }
-
-                const now = new Date();
-
-                data.Services.forEach((service) => {
-                    const row = document.createElement('tr');
-                    row.innerHTML = `
-                <td class="svcNumtd">
-                    <p class="svcNum">${service.ServiceNo}</p>
-                </td>
-                <td class="departure-spacing">
-                    <span class="bus-time">
-                        ${service.NextBus.EstimatedArrival ? formatArrivalTimeOrArr(service.NextBus.EstimatedArrival, now) : ''} 
-                        &nbsp; &nbsp; 
-                        ${service.NextBus.Type ? `<img src="assets/${service.NextBus.Type.toLowerCase()}.png" alt="${service.NextBus.Type}" style="width: 50px; height: auto;">` : ''}
-                        &nbsp;
-                        ${service.NextBus.Load ? `<span class="load-indicator ${service.NextBus.Load.toLowerCase()}"> ${getLoadIcon(service.NextBus.Load)}</span>` : ''}
-                    </span>
-
-                    <span class="bus-time">
-                        ${service.NextBus2.EstimatedArrival ? formatArrivalTimeOrArr(service.NextBus2.EstimatedArrival, now) : ''} 
-                        &nbsp;&nbsp; 
-                        ${service.NextBus2.Type ? `<img src="assets/${service.NextBus2.Type.toLowerCase()}.png" alt="${service.NextBus2.Type}" style="width: 50px; height: auto;">` : ''}
-                        &nbsp;
-                        ${service.NextBus2.Load ? `<span class="load-indicator ${service.NextBus2.Load.toLowerCase()}"> ${getLoadIcon(service.NextBus2.Load)}</span>` : ''}
-                    </span>
-                </td>
-                <td>
-                    ${service.Operator ? `<img src="assets/${service.Operator.toLowerCase()}.png" alt="${service.Operator}" class="operator-logo">` : ''}
-                </td>
-            `;
-                    tableBody.appendChild(row);
-                });
-
-            } catch (error) {
-                console.error('Error fetching bus arrivals:', error);
-                const tableBody = document.querySelector('table tbody');
-                tableBody.innerHTML = '<tr><td colspan="3"><p style = "text-align:center; display: flex; align-items: center; justify-content: center; gap: 10px;" Error loading data</td></tr>';
-            }
-        }
-
-        function getLoadIcon(load) {
-            switch (load) {
-                case 'SEA':
-                    return '<i class="fa-solid fa-user" title="Seats Available"></i>'; // Icon for SEA
-                case 'SDA':
-                    return '<i class="fa-solid fa-user-group" title="Standing Available"></i>'; // Icon for SDA
-                case 'LSD':
-                    return '<i class="fa-solid fa-people-group" title="Limited Standing"></i>'; // Icon for LSD
-                default:
-                    return ''; // No icon for unknown load values
-            }
-        }
-
-        // Function to format ISO string to hh:mm or show "Arrive" or greyed-out time
-        function formatArrivalTimeOrArr(isoString, now) {
-            const arrivalTime = new Date(isoString);
-
-            const timeDifference = arrivalTime - now;
-
-            if (timeDifference === 0) {
-                // Show "Arr" if the time difference is exactly 0
-                return `<span class="arrival-now">Arr</span>`;
-            } else if (timeDifference < 0) {
-                // Continue showing "Arr" if the time difference is -1 or more
-                return `<span class="arrival-now">Arr</span>`;
-            }
-
-            // Get the saved time format from localStorage
-            const savedFormat = localStorage.getItem('timeFormat') || '12-hour';
-
-            if (savedFormat === 'mins') {
-                // Calculate the time difference in minutes
-                const minutes = Math.ceil(timeDifference / (1000 * 60));
-                return `${minutes} min${minutes === 1 ? '' : 's'}`; // Singular/plural handling
-            }
-
-            // Format the time based on the saved format
-            const options = savedFormat === '24-hour'
-                ? { hour: '2-digit', minute: '2-digit', hour12: false }
-                : { hour: '2-digit', minute: '2-digit', hour12: true };
-
-            return arrivalTime.toLocaleTimeString('en-US', options);
-        }
-
-        document.addEventListener('DOMContentLoaded', () => {
-            const searchBusStopButton = document.getElementById('search-bus-stop-button'); // Select the "Search Bus Stop" button
-            const searchInput = document.getElementById('bus-stop-search'); // Select the search input field
-
-            if (searchBusStopButton && searchInput) {
-                searchBusStopButton.addEventListener('click', () => {
-                    searchInput.value = ''; // Clear the search input field
-                    sessionStorage.removeItem('busStopSearch'); // Clear the session storage value
-                });
-            }
-        });
-    </script>
+    <script src="js/art.js"></script>
 
 </body>
 
