--- a/buszy/nbs.html
+++ b/buszy/nbs.html
@@ -40,6 +40,97 @@
     .footer {
         display: none;
     }
+
+    .bus-stop {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 10px;
+        border: 1px solid #ddd;
+        border-radius: 25px;
+        margin-bottom: 10px;
+        background-color: #f9f9f9;
+    }
+
+    .bus-stop-code {
+        display: inline-flex;
+        align-items: center;
+        background-color: #94d40b;
+        color: #000;
+        font-weight: bold;
+        font-size: 20px;
+        padding: 5px 4px;
+        border-radius: 5px;
+        gap: 10px;
+        cursor: default;
+    }
+
+    body.dark-mode .bus-stop-code {
+        display: inline-flex;
+        align-items: center;
+        background-color: #7db603;
+        color: #000;
+        font-weight: bold;
+        font-size: 20px;
+        padding: 5px 4px;
+        border-radius: 5px;
+        gap: 10px;
+        cursor: default;
+    }
+
+    .bus-stop-code img {
+        width: 25px;
+        height: auto;
+        cursor: default;
+    }
+
+    .bus-stop-code-text,
+    body.dark-mode .bus-stop-code-text {
+        font-size: 18px;
+        font-weight: bold;
+        color: #000;
+        background-color: #fff;
+        border-top-right-radius: 5px;
+        border-bottom-right-radius: 5px;
+        padding: 2px 6px;
+        cursor: default;
+    }
+
+    .bus-stop-description,
+    body.dark-mode .bus-stop-description-title {
+        font-size: 20px;
+        font-weight: bold;
+        margin-left: 12px;
+        cursor: pointer;
+    }
+
+    .bus-stop-info {
+        display: flex;
+        align-items: center;
+        padding-right: 1em;
+    }
+
+    .bus-stop-details {
+        padding-right: 1em;
+    }
+
+    @media (max-width: 700px) {
+        .bus-stop-info {
+            flex-direction: column;
+            align-items: flex-start;
+        }
+
+        .bus-stop-details {
+            padding-right: 1em;
+            padding-top: 0.5em;
+        }
+
+        .bus-stop-description,
+        body.dark-mode .bus-stop-description {
+            margin-left: 0px;
+            margin-top: 5px;
+        }
+    }
 </style>
 
 <body>
@@ -308,240 +399,9 @@
 
     <script src="../js/utils.js"></script>
 
-    <script>
-        const apiUrl = 'https://bat-lta-9eb7bbf231a2.herokuapp.com/nearby-bus-stops'; // Update with your server URL
+    <script src="js/nbs.js"></script>
 
-        // Automatically fetch nearby bus stops on page load
-        document.addEventListener('DOMContentLoaded', () => {
-            const busStopsContainer = document.getElementById('bus-stops');
 
-            // Display "Searching for nearby bus stops..." message
-            busStopsContainer.innerHTML = '<p class="pin-msg"><span class="spinner"></span>Searching for nearby bus stops...</p>';
-
-            // Check if geolocation is available
-            if (!navigator.geolocation) {
-                alert('Geolocation is not supported by your browser.');
-                busStopsContainer.innerHTML = '<p class="pin-msg"><i class="fa-solid fa-triangle-exclamation"></i>Geolocation is not supported by your browser.</p>';
-                return;
-            }
-
-            // Get the user's current location
-            navigator.geolocation.getCurrentPosition(async (position) => {
-                const latitude = position.coords.latitude;
-                const longitude = position.coords.longitude;
-
-                try {
-                    // Fetch nearby bus stops from the backend
-                    const response = await fetch(`${apiUrl}?latitude=${latitude}&longitude=${longitude}&radius=2`);
-                    if (!response.ok) {
-                        throw new Error('Failed to fetch nearby bus stops');
-                    }
-
-                    const busStops = await response.json();
-                    displayBusStops(busStops);
-                } catch (error) {
-                    console.error('Error:', error);
-                    busStopsContainer.innerHTML = '<p class="pin-msg"><i class="fa-solid fa-triangle-exclamation"></i>Failed to fetch nearby bus stops. Please try again later.</p>';
-                }
-            }, (error) => {
-                console.error('Geolocation error:', error);
-                busStopsContainer.innerHTML = '<p class="pin-msg"><i class="fa-solid fa-triangle-exclamation"></i>Unable to retrieve your location.</p>';
-            });
-        });
-
-        document.addEventListener('DOMContentLoaded', () => {
-            const cachedLocation = sessionStorage.getItem('userLocation');
-            const busStopsContainer = document.getElementById('bus-stops');
-
-            if (cachedLocation) {
-                const { latitude, longitude } = JSON.parse(cachedLocation);
-                fetchNearbyBusStops(latitude, longitude);
-            } else {
-                // Get the user's current location
-                navigator.geolocation.getCurrentPosition((position) => {
-                    const latitude = position.coords.latitude;
-                    const longitude = position.coords.longitude;
-
-                    // Cache the location
-                    sessionStorage.setItem('userLocation', JSON.stringify({ latitude, longitude }));
-
-                    fetchNearbyBusStops(latitude, longitude);
-                }, (error) => {
-                    console.error('Geolocation error:', error);
-                    busStopsContainer.innerHTML = '<p class="pin-msg"><i class="fa-solid fa-triangle-exclamation"></i>Unable to retrieve your location.</p>';
-                }, {
-                    enableHighAccuracy: true,
-                    timeout: 10000,
-                    maximumAge: 0
-                });
-            }
-        });
-
-        async function fetchNearbyBusStops(latitude, longitude) {
-            try {
-                const response = await fetch(`${apiUrl}?latitude=${latitude}&longitude=${longitude}&radius=2`);
-                if (!response.ok) {
-                    throw new Error('Failed to fetch nearby bus stops');
-                }
-
-                const busStops = await response.json();
-                displayBusStops(busStops);
-            } catch (error) {
-                console.error('Error:', error);
-                busStopsContainer.innerHTML = '<p class="pin-msg"<i class="fa-solid fa-triangle-exclamation"></i>Failed to fetch nearby bus stops. Please try again later.</p>';
-            }
-        }
-
-      // Display the 3 nearest bus stops
-function displayBusStops(busStops) {
-    const busStopsContainer = document.getElementById('bus-stops');
-    busStopsContainer.innerHTML = ''; // Clear previous results
-
-    if (!busStops || busStops.length === 0) {
-        busStopsContainer.innerHTML = '<p class="pin-msg"><i class="fa-solid fa-circle-info"></i>No Bus Stops found nearby.</p>';
-        return;
-    }
-
-    busStops.forEach((busStop) => {
-        const distance = busStop.distance < 1
-            ? `${(busStop.distance * 1000).toFixed(0)} m` // Convert to meters if less than 1 km
-            : `${busStop.distance.toFixed(2)} km`; // Show in kilometers otherwise
-
-        const busStopElement = document.createElement('div');
-        busStopElement.className = 'bus-stop';
-        busStopElement.innerHTML = `
-            <p class="bs-name"><span>${busStop.Description}</span></p>
-            <p class="bs-info">
-                <span style="font-weight:bold;">${busStop.BusStopCode}</span> | 
-                <span>${busStop.RoadName}</span> | 
-                <span>${distance}</span>
-            </p>
-        `;
-
-        // Add click event listener to the entire div
-        busStopElement.addEventListener('click', () => {
-            // Navigate to buszy.html with the BusStopCode as a query parameter
-            window.location.href = `art.html?BusStopCode=${encodeURIComponent(busStop.BusStopCode)}`;
-        });
-
-        // Add click event listener to the "Pin" button
-        const pinButton = busStopElement.querySelector('.pin-btn');
-        pinButton.addEventListener('click', (event) => {
-            event.stopPropagation(); // Prevent triggering the parent div's click event
-            pinBusStop(busStop); // Pin the bus stop
-        });
-
-        busStopsContainer.appendChild(busStopElement);
-    });
-}
-
-// Function to toggle pin/unpin for a bus stop
-function togglePinBusStop(busStop, pinButton) {
-    // Retrieve existing pinned bus stops from localStorage
-    let pinnedBusStops = JSON.parse(localStorage.getItem('bookmarkedBusStops')) || [];
-
-    // Check if the bus stop is already pinned
-    const isAlreadyPinned = pinnedBusStops.some((stop) => stop.BusStopCode === busStop.BusStopCode);
-
-    if (isAlreadyPinned) {
-        // Unpin the bus stop
-        const confirmUnpin = confirm(`Are you sure you want to unpin this bus stop?`);
-        if (confirmUnpin) {
-            pinnedBusStops = pinnedBusStops.filter((stop) => stop.BusStopCode !== busStop.BusStopCode);
-            localStorage.setItem('bookmarkedBusStops', JSON.stringify(pinnedBusStops));
-            alert(`Bus Stop Unpinned.`);
-
-            // Update the button class and icon to "unpin"
-            pinButton.className = 'btn btn-toPin btn-nbs btn-sm';
-            pinButton.innerHTML = '<i class="fa-sharp fa-regular fa-thumbtack-angle"></i>';
-        }
-    } else {
-        // Pin the bus stop
-        pinnedBusStops.push(busStop);
-        localStorage.setItem('bookmarkedBusStops', JSON.stringify(pinnedBusStops));
-        alert(`Bus Stop Pinned.`);
-
-        // Update the button class and icon to "pin"
-        pinButton.className = 'btn btn-unpin btn-nbs btn-sm';
-        pinButton.innerHTML = '<i class="fa-solid fa-thumbtack-angle-slash"></i>';
-    }
-}
-
-// Display the 3 nearest bus stops
-function displayBusStops(busStops) {
-    const busStopsContainer = document.getElementById('bus-stops');
-    busStopsContainer.innerHTML = ''; // Clear previous results
-
-    if (!busStops || busStops.length === 0) {
-        busStopsContainer.innerHTML = '<p class="pin-msg"><i class="fa-solid fa-circle-info"></i>No Bus Stops found nearby.</p>';
-        return;
-    }
-
-    // Retrieve existing pinned bus stops from localStorage
-    const pinnedBusStops = JSON.parse(localStorage.getItem('bookmarkedBusStops')) || [];
-
-    busStops.forEach((busStop) => {
-        const distance = busStop.distance < 1
-            ? `${(busStop.distance * 1000).toFixed(0)} m` // Convert to meters if less than 1 km
-            : `${busStop.distance.toFixed(2)} km`; // Show in kilometers otherwise
-
-        const isPinned = pinnedBusStops.some((stop) => stop.BusStopCode === busStop.BusStopCode);
-
-        const busStopElement = document.createElement('div');
-        busStopElement.className = 'bus-stop';
-        busStopElement.innerHTML = `
-            <p class="bs-name"><span>${busStop.Description}</span></p>
-            <p class="bs-info">
-                <span style="font-weight:bold;">${busStop.BusStopCode}</span> | 
-                <span>${busStop.RoadName}</span> | 
-                <span>${distance}</span>
-            </p>
-            <button class="${isPinned ? 'btn btn-unpin btn-nbs btn-sm' : 'btn btn-toPin btn-nbs btn-sm'}">
-                <i class="${isPinned ? 'fa-solid fa-thumbtack-angle-slash' : 'fa-sharp fa-regular fa-thumbtack-angle'}"></i>
-            </button>
-        `;
-
-        // Add click event listener to the entire div
-        busStopElement.addEventListener('click', () => {
-            // Navigate to buszy.html with the BusStopCode as a query parameter
-            window.location.href = `art.html?BusStopCode=${encodeURIComponent(busStop.BusStopCode)}`;
-        });
-
-        // Add click event listener to the "Pin" button
-        const pinButton = busStopElement.querySelector('button');
-        pinButton.addEventListener('click', (event) => {
-            event.stopPropagation(); // Prevent triggering the parent div's click event
-            togglePinBusStop(busStop, pinButton); // Toggle pin/unpin
-        });
-
-        busStopsContainer.appendChild(busStopElement);
-    });
-}
-
-        document.addEventListener('DOMContentLoaded', () => {
-            const searchBusStopButton = document.querySelector('a[href="buszy.html"]'); // Select the "Search Bus Stop" button
-            const searchInput = document.getElementById('bus-stop-search'); // Select the search input field
-
-            if (searchBusStopButton && searchInput) {
-                searchBusStopButton.addEventListener('click', () => {
-                    searchInput.value = ''; // Clear the search bar
-                });
-            }
-        });
-
-        // Populate the search bar with the BusStopCode from query parameters
-        document.addEventListener('DOMContentLoaded', () => {
-            const urlParams = new URLSearchParams(window.location.search);
-            const busStopCode = urlParams.get('BusStopCode'); // Get the BusStopCode from the query parameters
-
-            if (busStopCode) {
-                const searchInput = document.getElementById('bus-stop-search'); // Select the search bar
-                if (searchInput) {
-                    searchInput.value = busStopCode; // Populate the search bar with the BusStopCode
-                }
-            }
-        });
-    </script>
 </body>
 
 </html>
