2025-01 Cumulative Update for Version 2501 (6.1.11)

--- a/buszy/art.html
+++ b/buszy/art.html
@@ -78,13 +78,13 @@
         margin-bottom: 0.5rem;
     }
 
-    .card .card-content {
+    .card .card-content-art {
         display: flex;
         flex-direction: column;
         gap: 0.5rem;
     }
 
-    .card .card-content span {
+    .card .card-content-art span {
         display: flex;
         align-items: center;
         gap: 0.5rem;
@@ -528,6 +528,8 @@
     <script src="../js/utils.js"></script>
 
     <script src="js/art.js"></script>
+
+    
 
 </body>
 
