--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@
 
 </head>
 
+<style>
+   
+
+
+
+</style>
+
 <body>
 
     <!-- Navigation Bar -->
@@ -157,73 +164,43 @@
     </section><!-- End Hero -->
 
     <div class="main-content">
-        <div class="pw-portfolio-area-featured clearfix" id="featured">
-            <div class="container-xxl container-fluid">
-                <div class="row">
-                    <div class="col-12">
-                        <div class="section-heading text-center wow fadeIn" data-wow-delay="100ms">
-                            <h2>Featured Works</h2>
-                        </div>
-                    </div>
+        <section class="wbnrfz-works">
+            <div class="container">
+                <div class="section-heading text-center wow fadeIn" data-wow-delay="100ms">
+                    <h2>Featured Works</h2>
                 </div>
-                <div class="container pw-portfolio">
-
-                    <div class="col-12 col-sm-4 col-md-4 col-lg-3 single_gallery_item ds mb-30 wow fadeIn" data-wow-delay="100ms"
-                        data-year="2025">
-                        <div class="single-portfolio-content">
-                            <img src="https://i.imgur.com/9zxAL3F.png" alt>
-                            <div class="hover-content-blog">
-                                <h4>Buszy - Bus Arrival Timings</h4>
-                                <a class="info" href="buszy.html" class="portfolio-img"><i
-                                        class="fa-solid fa-arrow-right"></i></a>
-                            </div>
+                <div class="wbnrfz-grid">
+                    <div class="card">
+                        <img src="https://i.imgur.com/9zxAL3F.png" alt="Work 1">
+                        <div class="card-content">
+                            <h3>Buszy - Bus Arrival Timings</h3>
+                            <a href="buszy.html" class="pw-btn-small btn-2"><i class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </div>
-
-                    <div class="col single_gallery_item ds mb-30 wow fadeIn" data-wow-delay="100ms"
-                        data-year="2025">
-                        <div class="single-portfolio-content">
-                            <img src="https://i.imgur.com/HaCQ71l.png" alt>
-                            <div class="hover-content-blog">
-                                <h4>EICW - Implementation Brainstorming</h4>
-                                <a class="info" href="eicw/eicw.html" class="portfolio-img"><i
-                                        class="fa-solid fa-arrow-right"></i></a>
-                            </div>
+                    <div class="card">
+                        <img src="https://i.imgur.com/HaCQ71l.png" alt="Work 2">
+                        <div class="card-content">
+                            <h3>EICW - Implementation Brainstorming</h3>
+                            <a href="eicw/eicw.html" class="pw-btn-small btn-2"><i class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </div>
-
-                    <div class="col single_gallery_item in mb-30 wow fadeIn" data-wow-delay="300ms"
-                        data-year="2024">
-                        <div class="single-portfolio-content">
-                            <img src="https://i.imgur.com/Dlkjslp.png" alt="tdc-v3">
-                            <div class="hover-content-blog">
-                                <h4>Train Delays Tracker</h4>
-                                <a class="info" href="https://nurafianzulkifli.github.io/train-delays-checker/"
-                                    class="portfolio-img"><i class="fa-solid fa-arrow-right"></i></a>
-                            </div>
+                    <div class="card">
+                        <img src="https://i.imgur.com/Dlkjslp.png" alt="Work 3">
+                        <div class="card-content">
+                            <h3>Train Delays Tracker</h3>
+                            <a href="https://nurafianzulkifli.github.io/train-delays-checker/" class="pw-btn-small btn-2"><i class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </div>
-
-                    <div class="col single_gallery_item ds mc mb-30 wow fadeIn"
-                        data-wow-delay="700ms">
-                        <div class="single-portfolio-content">
-                            <img src="https://i.imgur.com/IeRTJiV.png" alt="bus-stop-pole">
-                            <div class="hover-content-blog">
-                                <h4>LTA Bus Stop Pole Design Refresh</h4>
-                                <a class="info" href="worksbynrfz/lta-bp.html" class="portfolio-img"><i
-                                        class="fa-solid fa-arrow-right"></i></a>
-                            </div>
+                    <div class="card">
+                        <img src="https://i.imgur.com/IeRTJiV.png" alt="Work 4">
+                        <div class="card-content">
+                            <h3>LTA Bus Stop Pole Design Refresh</h3>
+                            <a href="worksbynrfz/lta-bp.html" class="pw-btn-small btn-2"><i class="fa-solid fa-arrow-right"></i></a>
                         </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-12 text-center wow fadeIn" data-wow-delay="700ms">
-                        <a href="./works-by-nrfz.html" class="btn pw-btn btn-2 mt-15">View All &nbsp;<i
-                                class="fa-solid fa-arrow-right"></i></a>
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
 
 
         <section class="about-me-area clearfix">
