--- a/buszy.html
+++ b/buszy.html
@@ -12,6 +12,8 @@
     <meta content="" name="keywords">
     <meta property="og:image" content="https://i.imgur.com/i8n9KYs.png" />
 
+    <link rel="manifest" href="manifest.json">
+
     <link rel="icon" href="img/core-img/favicon.png">
 
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v7.0.0/css/all.css" />
@@ -208,7 +210,7 @@
         font-size: 20px;
         font-weight: bold;
         margin-left: 12px;
-        cursor: default;
+        cursor: pointer;
     }
 
     .bus-stop-info {
@@ -448,6 +450,18 @@
     <script src="js/utils.js"></script>
 
     <script src="buszy/js/buszy-main.js"></script>
+
+    <script>
+        if ("serviceWorker" in navigator) {
+            navigator.serviceWorker.register("/service-worker.js")
+                .then((registration) => {
+                    console.log("Service Worker registered with scope:", registration.scope);
+                })
+                .catch((error) => {
+                    console.error("Service Worker registration failed:", error);
+                });
+        }
+    </script>
 
 </body>
 
