2025-01 Cumulative Update for Version 2501 (6.1.12)

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 <div class="section-heading text-center wow fadeIn" data-wow-delay="100ms">
                     <h2>Featured Works</h2>
                 </div>
-                <div class="wbnrfz-grid">
+                <div class="wbnrfz-grid wow fadeIn" data-wow-delay="300ms">
                     <div class="card">
                         <img src="https://i.imgur.com/TBlQxOJ.png" alt="Work 1">
                         <div class="card-content">
