--- a/eicw/btr-1.html
+++ b/eicw/btr-1.html
@@ -277,9 +277,9 @@
                 <!-- <a href="#staris2">
                   <button class="btn">STARiS 2.0 (SMRT)</button>
                 </a> -->
-                <a href="#cddbp">
+                <!-- <a href="#cddbp">
                   <button class="btn">Car Door Display (BPLRT)</button>
-                </a>
+                </a> -->
               </div>
             </div>
           </div>
