2025-01 Cumulative Update for Version 2501 (6.1.12)

--- a/buszy.html
+++ b/buszy.html
@@ -12,8 +12,6 @@
     <meta content="" name="keywords">
     <meta property="og:image" content="https://i.imgur.com/i8n9KYs.png" />
 
-    <link rel="manifest" href="manifest.json">
-
     <link rel="icon" href="img/core-img/favicon.png">
 
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v7.0.0/css/all.css" />
@@ -228,6 +226,7 @@
         body.dark-mode .bus-stop-description {
             margin-left: 0px;
             margin-top: 5px;
+            font-size: 20px;
         }
     }
 </style>
