2025-01 Cumulative Update for Version 2501 (6.1.13)

--- a/buszy/nbs.html
+++ b/buszy/nbs.html
@@ -114,6 +114,14 @@
         padding-right: 1em;
     }
 
+    .road-name {
+        font-size: 15px;
+    }
+
+    .distance {
+        font-weight: bold;
+    }
+
     @media (max-width: 700px) {
         .bus-stop-info {
             flex-direction: column;
@@ -129,6 +137,14 @@
         body.dark-mode .bus-stop-description {
             margin-left: 0px;
             margin-top: 5px;
+            font-size: 20px;
+        }
+
+        .bus-stop-description span,
+        body.dark-mode .bus-stop-description span {
+            margin-left: 0px;
+            margin-top: 5px;
+            font-size: 15px;
         }
     }
 </style>
