--- a/buszy/art.html
+++ b/buszy/art.html
@@ -250,6 +250,20 @@
         .card .card-content-art span {
             font-size: 17px;
         }
+
+        .bus-stop-info {
+            flex-direction: column;
+            align-items: flex-start;
+        }
+
+        .bus-stop-description,
+        body.dark-mode .bus-stop-description {
+            font-size: 35px;
+            font-weight: bold;
+            margin-left: 0px;
+            margin-top: 10px;
+            cursor: default;
+        }
     }
 
     @media (max-width: 450px) {
