2025-01 Cumulative Update for Version 2501 (6.1.13)

--- a/buszy/abs.html
+++ b/buszy/abs.html
@@ -290,11 +290,11 @@
                     <ul>
                         <li>
                             <a href="../buszy.html#pinned"><i class="fa-sharp fa-solid fa-thumbtack-angle"></i>
-                                Pinned</a>
+                            </a>
                         </li>
 
                         <li>
-                            <a href="nbs.html"><i class="fa-solid fa-location-dot"></i> Nearby</a>
+                            <a href="nbs.html"><i class="fa-solid fa-location-dot"></i> </a>
                         </li>
 
                         <li>
@@ -304,12 +304,12 @@
 
                         <li>
                             <a href="ann.html"><i class="fa-solid fa-bullhorn"></i>
-                                Announcements</a>
+                            </a>
                         </li>
 
                         <li>
                             <a href="settings.html"><i class="fa-solid fa-gear"></i>
-                                Settings</a>
+                            </a>
                         </li>
                     </ul>
 
@@ -334,7 +334,8 @@
         <div class="container">
             <h2 class="text-center" style="padding-top: 1em;">Bus Stops</h2>
             <div class="list-group">
-                <p class="pin-msg" id="loading-message" style="display: flex; align-items: center; justify-content: center;">
+                <p class="pin-msg" id="loading-message"
+                    style="display: flex; align-items: center; justify-content: center;">
                     <span class="spinner-border" role="status" style="margin-right: 1em;"></span>Loading Data...
                 </p>
             </div>
