--- a/buszy/ann.html
+++ b/buszy/ann.html
@@ -214,16 +214,16 @@
                     <ul>
                         <li>
                             <a href="../buszy.html#pinned"><i class="fa-sharp fa-solid fa-thumbtack-angle"></i>
-                                Pinned</a>
+                            </a>
                         </li>
 
                         <li>
-                            <a href="nbs.html"><i class="fa-solid fa-location-dot"></i> Nearby</a>
+                            <a href="nbs.html"><i class="fa-solid fa-location-dot"></i> </a>
                         </li>
 
                         <li>
                             <a href="abs.html"><i class="fa-solid fa-magnifying-glass"></i>
-                                Search</a>
+                            </a>
                         </li>
 
                         <li>
@@ -233,7 +233,7 @@
 
                         <li>
                             <a href="settings.html"><i class="fa-solid fa-gear"></i>
-                                Settings</a>
+                            </a>
                         </li>
                     </ul>
 
@@ -362,7 +362,7 @@
     <script src="../js/utils.js"></script>
 
     <script src="js/ann.js"></script>
-    
+
 </body>
 
 </html>
