--- a/buszy/settings.html
+++ b/buszy/settings.html
@@ -248,21 +248,21 @@
                     <ul>
                         <li>
                             <a href="../buszy.html#pinned"><i class="fa-sharp fa-solid fa-thumbtack-angle"></i>
-                                Pinned</a>
+                            </a>
                         </li>
 
                         <li>
-                            <a href="nbs.html"><i class="fa-solid fa-location-dot"></i> Nearby</a>
+                            <a href="nbs.html"><i class="fa-solid fa-location-dot"></i> </a>
                         </li>
 
                         <li>
                             <a href="abs.html"><i class="fa-solid fa-magnifying-glass"></i>
-                                Search</a>
+                            </a>
                         </li>
 
                         <li>
                             <a href="ann.html"><i class="fa-solid fa-bullhorn"></i>
-                                Announcements</a>
+                            </a>
                         </li>
                         <li>
                             <a href="#" class="active"><i class="fa-solid fa-gear"></i>
