2025-01 Cumulative Update for Version 2501 (6.1.13)

--- a/buszy/abs.html
+++ b/buszy/abs.html
@@ -289,12 +289,12 @@
 
                     <ul>
                         <li>
-                            <a href="../buszy.html#pinned"><i class="fa-sharp fa-solid fa-thumbtack-angle"></i>
+                            <a href="../buszy.html#pinned"><i class="fa-sharp fa-solid fa-thumbtack-angle" title="Pinned"></i>
                             </a>
                         </li>
 
                         <li>
-                            <a href="nbs.html"><i class="fa-solid fa-location-dot"></i> </a>
+                            <a href="nbs.html"><i class="fa-solid fa-location-dot" title="Nearby"></i> </a>
                         </li>
 
                         <li>
@@ -303,12 +303,12 @@
                         </li>
 
                         <li>
-                            <a href="ann.html"><i class="fa-solid fa-bullhorn"></i>
+                            <a href="ann.html"><i class="fa-solid fa-bullhorn" title="Announcements"></i>
                             </a>
                         </li>
 
                         <li>
-                            <a href="settings.html"><i class="fa-solid fa-gear"></i>
+                            <a href="settings.html"><i class="fa-solid fa-gear" title="Settings"></i>
                             </a>
                         </li>
                     </ul>
