--- a/buszy/nbs.html
+++ b/buszy/nbs.html
@@ -319,7 +319,7 @@
 
                     <ul>
                         <li>
-                            <a href="../buszy.html#pinned"><i class="fa-sharp fa-solid fa-thumbtack-angle"></i>
+                            <a href="../buszy.html#pinned"><i class="fa-sharp fa-solid fa-thumbtack-angle" title="Pinned"></i>
                                 </a>
                         </li>
 
@@ -328,17 +328,17 @@
                         </li>
 
                         <li>
-                            <a href="abs.html"><i class="fa-solid fa-magnifying-glass"></i>
+                            <a href="abs.html"><i class="fa-solid fa-magnifying-glass" title="Search"></i>
                                 </a>
                         </li>
 
                         <li>
-                            <a href="ann.html"><i class="fa-solid fa-bullhorn"></i>
+                            <a href="ann.html"><i class="fa-solid fa-bullhorn" title="Announcements"></i>
                                 </a>
                         </li>
 
                         <li>
-                            <a href="settings.html"><i class="fa-solid fa-gear"></i>
+                            <a href="settings.html"><i class="fa-solid fa-gear" title="Settings"></i>
                                 </a>
                         </li>
                     </ul>
