--- a/buszy/ann.html
+++ b/buszy/ann.html
@@ -213,16 +213,16 @@
 
                     <ul>
                         <li>
-                            <a href="../buszy.html#pinned"><i class="fa-sharp fa-solid fa-thumbtack-angle"></i>
+                            <a href="../buszy.html#pinned"><i class="fa-sharp fa-solid fa-thumbtack-angle" title="Pinned"></i>
                             </a>
                         </li>
 
                         <li>
-                            <a href="nbs.html"><i class="fa-solid fa-location-dot"></i> </a>
+                            <a href="nbs.html"><i class="fa-solid fa-location-dot" title="Nearby"></i> </a>
                         </li>
 
                         <li>
-                            <a href="abs.html"><i class="fa-solid fa-magnifying-glass"></i>
+                            <a href="abs.html"><i class="fa-solid fa-magnifying-glass" title="Search"></i>
                             </a>
                         </li>
 
@@ -232,7 +232,7 @@
                         </li>
 
                         <li>
-                            <a href="settings.html"><i class="fa-solid fa-gear"></i>
+                            <a href="settings.html"><i class="fa-solid fa-gear" title="Settings"></i>
                             </a>
                         </li>
                     </ul>
