--- a/buszy/settings.html
+++ b/buszy/settings.html
@@ -87,7 +87,9 @@
     }
 
     .btn-rfetch:focus,
-    .btn-rfetch:hover {
+    .btn-rfetch:hover,
+    .btn-install:focus,
+    .btn-install:hover {
         font-weight: 500;
         background-color: #6d99c0 !important;
         color: #fff;
