--- a/buszy/settings.html
+++ b/buszy/settings.html
@@ -95,6 +95,11 @@
         transform: translateY(-2px);
     }
 
+    .btn-install:disabled {
+        background-color: grey !important;
+        cursor: not-allowed;
+    }
+
     .label-set {
         padding-top: 0.5em !important;
         padding-bottom: 0.5em !important;
