2025-01 Cumulative Update for Version 2501 (6.1.13)

--- a/buszy/settings.html
+++ b/buszy/settings.html
@@ -350,7 +350,7 @@
                 </li>
             </ul>
 
-            <h2 class="text-center" style="padding-top: 1em;">Miscellaneous</h2>
+            <h2 class="text-center" style="padding-top: 1em;">Install</h2>
             <ul class="list-group">
                 <ul class="list-group">
                     <li class="list-group-item">
